--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,7 @@ redcarpet:
         'tables',
         'hardwrap'
     ]
+
+# Turn on recognition of Github Flavored Markdown
+kramdown:
+    imput: GFM
